# fastapi-base

./: .env.example  .flake8  LICENSE  README.md  pyproject.toml  schema.prisma
alembic/: env.py
alembic/versions/: 2884043fb162_init.py  77e3a8c67488_add_invoice_created_at_field.py  b21e89643ba5_add_user_model.py  d91a095238b8_init.py  e77b654501b8_init.py
app/: scripts.py
app/core/: dependencies.py  security.py
app/routers/: auth.py  http_exceptions.py
src/: __init__.py  app.py  asgi.py  database.py  scripts.py  settings.py
src/core/: dependencies.py  http_exceptions.py  security.py
src/models/: __init__.py  user.py
src/repository/: user.py
src/routers/: __init__.py  auth.py  invoice.py
src/routers/auth/: __init__.py  utils.py
src/schemas/: __init__.py  invoice.py  token.py  user.py
src/scripts/: __init__.py  db.py  server.py
src/services/: auth.py  user.py
